2008-01-19  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Improved IndexOf
	  with first_order_id caching.

2008-01-18  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Minor fix for last
	  commit.

2008-01-18  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Implimented
	  IndexOf() using SQL MAGIC!

	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs,
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs,
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs:
	  Removed now superfluous DbIndex

	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	  Rejiggered IndexOf

	* src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs: Got
	  rid of now superfluous IDatabaseItem type

	* src/Core/Banshee.Services/Banshee.Database/BansheeModelCache.cs:
	  Rejiggered generic constraints

2008-01-18  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlaybackControllerService.cs:
	  Makes sure playback doesn't barf when there is no next track to play.

2008-01-18  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Core/Hyena/Hyena.Data.Sqlite/DatabaseAttributes.cs,
	  src/Core/Hyena/Hyena.Data.Sqlite/SqliteModelProvider.cs,
	  src/Core/Hyena/Hyena.Data.Sqlite/DatabaseColumnAttribute.cs,
	  src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs,
	  src/Core/Banshee.Services/Banshee.Collection.Database/LibraryTrackInfo.cs,
	  src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs,
	  src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs: Got
	  rid of DatabaseTableAttribute

2008-01-18  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Hyena/Makefile.am:
	* src/Core/Hyena/Hyena.Data.Sqlite/SqilteModelCache.cs: